# python-api-polylith-example

./: .gitignore  README.md  pyproject.toml  run.sh  workspace.toml
bases/example/api_bar/: __init__.py  core.py
bases/example/api_foo/: __init__.py  core.py
bases/marvhus/api_bar/: core.py
bases/marvhus/api_foo/: core.py
bases/marvhus/api_users/: __init__.py  core.py  routes.py
components/example/log/: core.py
components/example/math_utils/: __init__.py  core.py
components/example/service_foo/: __init__.py  core.py
components/marvhus/log/: __init__.py
components/marvhus/math_utils/: __init__.py  helpers.py
components/marvhus/service_foo/: __init__.py
components/marvhus/service_users/: __init__.py  core.py  models.py
development/: martin.py  repl.sh
projects/api_bar/: Dockerfile  pyproject.toml
projects/api_foo/: Dockerfile  pyproject.toml  requirements.txt  run.sh
projects/api_users/: Dockerfile  pyproject.toml
test/bases/example/api_bar/: test_core.py
test/bases/example/api_foo/: test_core.py
test/bases/marvhus/api_bar/: test_core.py
test/bases/marvhus/api_foo/: test_core.py
test/bases/marvhus/api_users/: test_core.py
test/components/example/math_utils/: test_core.py
test/components/example/service_foo/: test_core.py
test/components/marvhus/log/: test_core.py
test/components/marvhus/math_utils/: test_core.py
test/components/marvhus/service_foo/: test_core.py
test/components/marvhus/service_users/: test_core.py
