[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-api-polylith-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.3.4",
]

[tool.uv]
managed = true
dev-dependencies = [
    "ipython>=8.32.0",
    "polylith-cli>=1.26.0",
    "pytest>=8.3.4",
]

[tool.uv.workspace]
members = ["projects/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]


[tool.polylinth.bricks]
"bases/marvhus/api_foo" = "marvhus/api_foo"
"bases/marvhus/api_bar" = "marvhus/api_bar"
"components/marvhus/log" = "marvhus/log"
"components/marvhus/service_foo" = "marvhus/service_foo"
"components/marvhus/math_utils" = "marvhus/math_utils"
