[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "api_bar"
version = "0.1.0"

requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.3.4",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["marvhus"]

[tool.polylith.bricks]
"../../bases/marvhus/api_bar" = "marvhus/api_bar"
"../../components/marvhus/log" = "marvhus/log"
"../../components/marvhus/math_utils" = "marvhus/math_utils"
