[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "api_users"
version = "0.1.0"

requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.3.4",
]

[tool.hatch.build.hooks.polylith-bricks]

[tool.hatch.build.targets.wheel]
packages = ["marvhus"]

[tool.polylith.bricks]
"../../bases/marvhus/api_users" = "marvhus/api_users"
"../../components/marvhus/log" = "marvhus/log"
"../../components/marvhus/service_users" = "marvhus/service_users"
